<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mascotas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>
    <string name="seleccionar_mascota">Seleccione mascota</string>
    <string name="perro">Perro</string>
    <string name="gato">Gato</string>
    <string name="otro">Otro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="chip">Numero de chip</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="raza">Raza</string>
    <string name="peso">Peso</string>
    <string name="formato_fecha">DD/MM/AAAA</string>
    <string name="kg">Kg</string>
    <string name="foto">Foto</string>

</resources>
